@@ -15,6 +15,7 @@ v5.5.1
 - Fixed - Gutteberg Advanced CSS bug in editor when replacing selector with block class
 - Fixed - Gutenberg Advanced CSS bug when custom CSS was applied for sidebar block navigation
 - Fixed - Markup Select input - bug with placeholder undefined $value variable
+- Fixed - Gutenberg Columns gridlines with gutter support
 - Added - core/archives custom markup using inputs and navigation as rendering content
 - Added - core/code default styleing
 - Added - core/tag-cloud default styleing
